bk_ida/gccida/g1/verify_local_live_at_start
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_local_live_at_start/src/flow.c:1065:30: error: use of undeclared identifier 'to'
fancy_abort( ( const char *)&to, 604, "verify_local_live_at_start"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_local_live_at_start/src/flow.c:1098:30: error: use of undeclared identifier 'to'
fancy_abort( ( const char *)&to, 557, "verify_wide_reg"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_local_live_at_start/src/flow.c:1112:19: error: use of undeclared identifier 'to'
fwrite( ( char *)&to.first + 7, 1uLL, 5uLL, rtl_dump_file); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_local_live_at_start/src/flow.c:1115:30: error: use of undeclared identifier 'to'
fancy_abort( ( const char *)&to, 583, "verify_local_live_at_start"); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/verify_local_live_at_start/src/obj/flow.o] Error 1
